# my_padim

./: .gitignore  README.md  main.py  pyproject.toml  test.ipynb  train.py
dataset/: mvtec_dataset.py
models/: padim.py
models/backbones/: backbone.py  dinov2.py  resnet.py
