[project]
name = "padim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.6"
dependencies = [
    "matplotlib>=3.10.8",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "jupyter>=1.1.1",
]
